2009-08-19  Peter Bloomfield

	* src/main-window.c: Manage sensitivity of "Get New Mail"
	action.
	* src/main.c (mw_message_received_cb, main): ditto.

2009-08-19  Peter Bloomfield

	Allow only one compose window per draft message.

	* src/balsa-index.c (bndx_row_activated): check for NULL return
	from sendmsg_window_continue.
	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler,
	sw_save_draft): clear object data.
	(sendmsg_window_continue): present existing window if it exists
	and return NULL, and use object data to remember window.

2009-08-19  Peter Bloomfield

	* src/balsa-mime-widget-message.c (bm_header_widget_new): use
	GTK_WRAP_WORD_CHAR so that over-long words do not force
	over-wide window.
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text):
	ditto.
	* src/balsa-mime-widget-vcalendar.c: ditto.

2009-08-11  Peter Bloomfield

	* src/balsa-print-object-header.c (header_add_list): do not
	print header line with NULL address string.

2006-08-09  Pawel Salek

	* NEWS, configure.in: release balsa-2.4.1

2009-08-04  Peter Bloomfield

	* configure.in: new option --with-canberra=no.
	* libbalsa/filter.c (libbalsa_filter_mailbox_messages): use
	libcanberra-gtk in preference to libgnome for filter sounds.

2009-08-02  Peter Bloomfield

	* src/sendmsg-window.c (bsmsg_set_subject_from_body): use
	existing subject for continued draft message; new name and api;
	(update_bsmsg_identity), (bsm_finish_setup),
	(sendmsg_window_forward): use new name and api.

2009-08-01  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_get_pixbuf): workaround
	for IE's use of non-IANA registered mime-type "image/pjpeg" for
	progressive JPEG image.

2009-08-01  Peter Bloomfield

	* src/sendmsg-window.c (set_entry_to_subject): do not drop
	subject when continuing a new message.

2006-07-30  Pawel Salek

	* libbalsa/imap/imap-commands.c: lock LIST fixed.

2009-07-28  Peter Bloomfield

	* libbalsa/address-view.c (lbav_add_from_list),